--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "virosms-github-io",
+  "homepage": "https://virosms.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
