feat: Actualizar la URL de la página de inicio y la base de despliegue en la configuración

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virosms-github-io",
-  "homepage": "https://virosms.com",
+  "homepage": "https://VirosMs.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
