feat: Actualizar la URL de la página de inicio en package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virosms-github-io",
-  "homepage": "https://VirosMs.github.io",
+  "homepage": "https://virosms.com/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
